k8s-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pyfastapi-hello-app
  labels:
    app: pyfastapi-hello-app
    app.kubernetes.io/name: pyfastapi-hello-app
    app.kubernetes.io/part-of: python-apps
    app.openshift.io/runtime: python
spec:
  ports:
    - name: 9002-tcp
      protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP
  selector:
    app: pyfastapi-hello-app
    deployment: pyfastapi-hello-app
