k8s-manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pyfastapi-hello-app
  labels:
    app: pyfastapi-hello-app
    app.kubernetes.io/name: pyfastapi-hello-app
    app.kubernetes.io/part-of: python-apps
    app.openshift.io/runtime: python
spec:
  host: pyfastapi-hello-app.apps.mc3.vpslab.com
  to:
    kind: Service
    name: pyfastapi-hello-app
    weight: 100
  port:
    targetPort: 9002-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
